using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string MusicVolume = "MusicVolume";
    public const string SfxVolume = "SfxVolume";

    public const string Anim_IsRun = "isRun";
    public const string Anim_IsJump = "isJump";
    public const string Anim_IsCrouch = "isCrouch";
    public const string Anim_TriggerFall = "triggerFall";
    public const string Anim_TriggerHurt = "triggerHurt";
    public const string Anim_IsInvulnerable = "isInvulnerable";
    public const string Anim_IsDead = "isDead";
}
